2009-04-02  Janis Johnson  <janis187@us.ibm.com>

	* gcc.target/powerpc/ppc64-double-1.c: XFAIL for lp64.

2009-04-01  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/compile/20090401-1.c: New test.

2009-04-01  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-04-01  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/4926
	* g++.dg/template/pr4926-1.C: New.

2009-04-01  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-04-01  H.J. Lu  <hongjiu.lu@intel.com>

	PR tree-optimization/35011
	* g++.dg/other/pr35011.C: New.

2009-04-01  Jakub Jelinek  <jakub@redhat.com>

	PR target/39226
	* gcc.dg/pr39226.c: New test.

2009-04-01  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-04-01  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/35240
	* g++.dg/template/pr35240.C: New.

2009-04-01  Jakub Jelinek  <jakub@redhat.com>

	PR c/37772
	* gcc.dg/pr37772.c: New test.
	* g++.dg/ext/asm11.C: New test.

2009-03-31  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-03-31  Joseph Myers  <joseph@codesourcery.com>

	PR target/39592
	* gcc.target/i386/pr39592-1.c: New test.

2009-03-30  Jakub Jelinek  <jakub@redhat.com>

	Revert

	2009-03-27  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	PR c++/35652
	* gcc.dg/pr35652.C: New.
	* g++.dg/warn/pr35652.C: New.
	* gcc.dg/format/plus-1.c: Adjust message.

2009-03-30  Jakub Jelinek  <jakub@redhat.com>

	* gfortran.dg/bind_c_usage_19.f90: New test.

	PR target/39558
	* gcc.target/powerpc/altivec-29.c: New test.

2009-03-29  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-03-29  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/39545
	* gcc.c-torture/compile/pr16566-2.c: Add -Wno-psabi for x86-64.

	* gcc.target/i386/pr39545-1.c: New.
	* gcc.target/i386/pr39545-2.c: Likewise.

	* gcc.target/x86_64/abi/test_passing_structs.c (flex1_struct): New.
	(flex2_struct): Likewise.
	(check_struct_passing7): Likewise.
	(check_struct_passing8): Likewise.
	(f1s): Likewise.
	(f2s): Likewise.